--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 
 :root{
     --cor-de-fundo: #EBECEE;
-    --branco: #ffffff;
+    --branco: #FFFFFF;
 }
 body{
     background-color: var(--cor-de-fundo);
