--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,13 @@
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
+    --fonte-principal: "poppins"
 }
 body{
     background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font size: 16px;
+    font weight: 400;
 }
 h1{
     background-color: white;
