--- a/styles/header.css
+++ b/styles/header.css
@@ -18,6 +18,11 @@
 h1{
     display: none;
 }
+.lista-menu{
+    display: block;
+    position: absolute;
+    top: 100%;
+}
 @media screen and (min-width:1024px) {
     h1{
         font-size:30px;
