--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,13 @@
 
 :root{
     --cor-de-fundo: #EBECEE;
+
     --branco: #FFFFFF;
+
+    --amarelo: #FECD2F;
+
+    --roxo: #733887;
+    
     --fonte-principal: "poppins"
 }
 body{
