--- a/styles/style.css
+++ b/styles/style.css
@@ -8,14 +8,14 @@
     --amarelo: #FECD2F;
 
     --roxo: #733887;
-    
+
     --fonte-principal: "poppins"
 }
 body{
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte-principal);
-    font size: 16px;
-    font weight: 400;
+    font-size: 16px;
+    font-weight: 400;
 }
 h1{
     background-color: white;
