--- a/styles/header.css
+++ b/styles/header.css
@@ -16,7 +16,8 @@
     align-items: center;
 }
 h1{
-    display: none;
+    display: none;font size: 16px;
+    font weight: 400;
 }
 .div-imagem{
     padding: 1em;
@@ -40,9 +41,7 @@ h1{
         background-color: var(--branco);
     }
 
-    .div-menu{
-        display: none;
-    }
+
 @media screen and (min-width:1024px) {
     h1{
         font-size:30px;
