--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 .cabecalho_menu-hamburguer{
-    width: 24px;
-    height: 24px;
+    width: 70px;
+    height: 70px;
     background-image: url(../imagem/Menu.svg.png);
     display: inline-block;
     background-repeat: no-repeat;
@@ -18,8 +18,9 @@
     align-items: center;
 }
 h1{
-    display: none;font size: 16px;
-    font weight: 400;
+    display: none;
+    font-size: 16px;
+    font-weight: 400;
 }
 .lista-menu{
     display: block;
@@ -32,16 +33,22 @@ h1{
 }
     .lista-menu-titulo{
         color: var(--amarelo);
+        font-weight: 700;
     }
     .lista-menu-link{
         background: var(--roxo);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
         background-clip: text;
         text-transform: uppercase;
     }
+    .div-menu{
+        display: none;
+    }
 @media screen and (min-width:1024px) {
     h1{
-        font-size:30px;
         display: block;
+        font-size:30px;
     }
 }
 .lista-menu{
